--- a/index.html
+++ b/index.html
@@ -68,6 +68,66 @@
                 "paymentAccepted": ["Cash", "CreditCard", "DebitCard", "ApplePayment", "GooglePayment"]
             },
             {
+                "@type": "Review",
+                "@id": "https://redriverbbq.com/#review-bobby-banning",
+                "itemReviewed": {"@id": "https://redriverbbq.com/#restaurant"},
+                "author": {
+                    "@type": "Person",
+                    "name": "Bobby Banning"
+                },
+                "reviewRating": {
+                    "@type": "Rating",
+                    "ratingValue": "5",
+                    "bestRating": "5"
+                },
+                "datePublished": "2025-10-11",
+                "reviewBody": "This place is absolutely amazing...The young man taking our order was very friendly...There was a manager walking constantly checking on people. We were truly impressed.",
+                "publisher": {
+                    "@type": "Organization",
+                    "name": "Google"
+                }
+            },
+            {
+                "@type": "Review",
+                "@id": "https://redriverbbq.com/#review-elijah-millender",
+                "itemReviewed": {"@id": "https://redriverbbq.com/#restaurant"},
+                "author": {
+                    "@type": "Person",
+                    "name": "Elijah Millender"
+                },
+                "reviewRating": {
+                    "@type": "Rating",
+                    "ratingValue": "5",
+                    "bestRating": "5"
+                },
+                "datePublished": "2026-01-11",
+                "reviewBody": "What I absolutely love even more is the customer service especially Mr. Philip and Mr. Ordacio...He even made my 2 year old smile ear to ear.",
+                "publisher": {
+                    "@type": "Organization",
+                    "name": "Google"
+                }
+            },
+            {
+                "@type": "Review",
+                "@id": "https://redriverbbq.com/#review-angelina-sheppard",
+                "itemReviewed": {"@id": "https://redriverbbq.com/#restaurant"},
+                "author": {
+                    "@type": "Person",
+                    "name": "Angelina Sheppard"
+                },
+                "reviewRating": {
+                    "@type": "Rating",
+                    "ratingValue": "5",
+                    "bestRating": "5"
+                },
+                "datePublished": "2025-09-11",
+                "reviewBody": "We were blown out of the water! The food is amazing!...The smoke flavor was a solid 10/10 for those who expect that smokehouse taste.",
+                "publisher": {
+                    "@type": "Organization",
+                    "name": "Google"
+                }
+            },
+            {
                 "@type": "BreadcrumbList",
                 "@id": "https://redriverbbq.com/#breadcrumb",
                 "itemListElement": [{"@type": "ListItem", "position": 1, "name": "Home", "item": "https://redriverbbq.com/"}]
