--- a/league-city.html
+++ b/league-city.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>League City Location • Red River Bar-B-Que & Grill</title>
+    <title>League City Location €¢ Red River Bar-B-Que & Grill</title>
     
     <!-- Schema.org Location Markup -->
     <script type="application/ld+json">
@@ -43,7 +43,7 @@
                 ],
                 "servesCuisine": ["BBQ", "Barbecue", "Texas BBQ", "American"],
                 "priceRange": "$$",
-                "hasMenu": {"@type": "Menu", "url": "https://redriverbbq.com/menu.html"},
+                "hasMenu": {"@type": "Menu", "url": "https://redriverbbq.com/dine-in-menu.html"},
                 "aggregateRating": {"@type": "AggregateRating", "ratingValue": "4.4", "reviewCount": "3645"}
             },
             {
@@ -71,7 +71,7 @@
         * { scroll-behavior: smooth; }
         body { font-family: 'Open Sans', sans-serif; }
         h1, h2, h3, h4, .font-oswald { font-family: 'Oswald', sans-serif; }
-        .chalkboard-texture { background-image: url('https://www.transparenttextures.com/patterns/wood-pattern.png'); background-color: #555555; }}
+        .chalkboard-texture { background-image: url('https://www.transparenttextures.com/patterns/wood-pattern.png'); background-color: #555555; }
         .diagonal-stripes { background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255,255,255,0.05) 10px, rgba(255,255,255,0.05) 20px); background-color: #666666; }
         .nav-link { position: relative; }
         .nav-link::after { content: ''; position: absolute; bottom: -4px; left: 0; width: 0; height: 2px; background: linear-gradient(90deg, #eab308, #f59e0b); transition: width 0.3s ease; }
@@ -126,8 +126,10 @@
                 </button>
                 <nav class="hidden md:flex flex-col items-end">
                     <ul class="flex gap-x-6 text-white font-oswald font-bold uppercase text-base tracking-wide">
-                        <li><a href="locations.html" class="nav-link hover:text-yellow-400 transition-all duration-300">LOCATIONS & MENUS</a></li>
-                        <li><a href="catering.html" class="nav-link hover:text-yellow-400 transition-all duration-300">CATERING</a></li>
+                        <li><a href="locations.html" class="nav-link hover:text-yellow-400 transition-all duration-300">LOCATIONS</a></li>
+                        <li><a href="dine-in-menu.html" class="nav-link hover:text-yellow-400 transition-all duration-300">DINE IN MENU</a></li>
+                        <li><a href="to-go-menu.html" class="nav-link hover:text-yellow-400 transition-all duration-300">TO-GO MENU</a></li>
+                        <li><a href="catering.html" class="nav-link hover:text-yellow-400 transition-all duration-300">CATERING MENU</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">PARTY ROOM</a></li>
                         <li><a href="./careers.html" class="nav-link hover:text-yellow-400 transition-all duration-300">CAREERS</a></li>
                         <li><a href="community.html" class="nav-link hover:text-yellow-400 transition-all duration-300">COMMUNITY</a></li>
@@ -152,8 +154,10 @@
         </div>
         <nav class="p-4">
             <ul class="space-y-1">
-                <li><a href="locations.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all"><i data-lucide="map-pin" class="w-5 h-5 text-red-500"></i> Locations & Menus</a></li>
-                <li><a href="catering.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all"><i data-lucide="utensils" class="w-5 h-5 text-red-500"></i> Catering</a></li>
+                <li><a href="locations.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all"><i data-lucide="map-pin" class="w-5 h-5 text-red-500"></i> Locations</a></li>
+                <li><a href="dine-in-menu.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all"><i data-lucide="book-open" class="w-5 h-5 text-red-500"></i> Dine In Menu</a></li>
+                <li><a href="to-go-menu.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all"><i data-lucide="package" class="w-5 h-5 text-red-500"></i> To-Go Menu</a></li>
+                <li><a href="catering.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all"><i data-lucide="utensils" class="w-5 h-5 text-red-500"></i> Catering Menu</a></li>
                 <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all"><i data-lucide="party-popper" class="w-5 h-5 text-red-500"></i> Party Room</a></li>
                 <li><a href="./careers.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all"><i data-lucide="briefcase" class="w-5 h-5 text-red-500"></i> Careers</a></li>
                 <li><a href="community.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all"><i data-lucide="heart" class="w-5 h-5 text-red-500"></i> Community</a></li>
@@ -301,15 +305,15 @@
                 <i data-lucide="heart" class="w-4 h-4"></i> Community
             </a>
             <a href="reviews.html" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
-                <i data-lucide="star" class="w-4 h-4"></i> ⭐ Customer Reviews
+                <i data-lucide="star" class="w-4 h-4"></i> ­ Customer Reviews
             </a>
             <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/marketing-signup" target="_blank" rel="noopener noreferrer" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
                 <i data-lucide="mail" class="w-4 h-4"></i> E-Club
             </a>
         </div>
         
-        <div class="mt-12 text-center text-xs text-black uppercase tracking-widest">&copy; 2026 Red River BBQ & Grill. All Rights Reserved.
-            <p class="mt-2 text-black normal-case tracking-normal">Made with <span class="text-red-500">♥</span> in Texas | Riva Strategies</p>
+        <div class="mt-12 text-center text-xs text-white uppercase tracking-widest">&copy; 2026 Red River BBQ & Grill. All Rights Reserved.
+            <p class="mt-2 text-white normal-case tracking-normal">Made with <span class="text-red-500">♥</span> in Texas | <a href="https://rivastrategies.com" target="_blank" rel="noopener noreferrer" class="hover:text-yellow-400 transition-colors">Riva Strategies</a></p>
         </div>
     </footer>
 
