--- a/order.html
+++ b/order.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Online • Red River BBQ & Grill</title>
+    <title>Order Online €¢ Red River BBQ & Grill</title>
     <meta name="description" content="Order Red River BBQ & Grill online for pickup or delivery in League City.">
     
     <!-- Schema.org E-Commerce Markup -->
@@ -83,7 +83,7 @@
                 <a href="https://order.redriverrestaurants.com/order/red-river-bbq-league-city-1911-e-main-st-suite-b" class="order-button" target="_blank" rel="nofollow noopener noreferrer">Pick-Up Order</a>
                 <a href="https://order.online/store/red-river-bbq-grill-league-city-72318?hideModal=true&pickup=true" class="order-button delivery" target="_blank" rel="nofollow noopener noreferrer">Delivery Order</a>
             </div>
-            <a href="index.html" class="back-link">← Back to Home</a>
+            <a href="index.html" class="back-link">† Back to Home</a>
         </div>
     </div>
 
@@ -140,14 +140,14 @@
             <a href="./careers.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">Careers</a>
             <a href="catering.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">Catering</a>
             <a href="community.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">Community</a>
-            <a href="reviews.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">⭐ Customer Reviews</a>
+            <a href="reviews.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">­ Customer Reviews</a>
             <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/marketing-signup" target="_blank" rel="noopener noreferrer" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">E-Club</a>
         </div>
 
         <!-- Copyright -->
-        <div class="mt-12 text-center text-xs text-black uppercase tracking-widest">
+        <div class="mt-12 text-center text-xs text-white uppercase tracking-widest">
             &copy; 2026 Red River BBQ & Grill. All Rights Reserved.
-            <p class="mt-2 text-black normal-case tracking-normal">Made with <span class="text-red-500">♥</span> in Texas | Riva Strategies</p>
+            <p class="mt-2 text-white normal-case tracking-normal">Made with <span class="text-red-500">♥</span> in Texas | <a href="https://rivastrategies.com" target="_blank" rel="noopener noreferrer" class="hover:text-yellow-400 transition-colors">Riva Strategies</a></p>
         </div>
     </footer>
 </body>
