--- a/careers.html
+++ b/careers.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -654,15 +654,152 @@
                 class="w-full h-full object-cover"
             />
             
-            <div class="absolute inset-0 flex items-center justify-center text-center px-4">
-                <div class="max-w-4xl mx-auto">
-                    <h1 class="text-4xl md:text-6xl lg:text-7xl font-oswald font-bold text-white mb-4 animate-fadeInDown">
-                        CAREERS
-                    </h1>
-                    <p class="text-lg md:text-xl text-gray-300 animate-fadeInUp delay-200">
-                        Join the Red River BBQ & Grill Team
-                    </p>
+        </section>
+
+        <!-- SEO INTRO SECTION -->
+        <section class="py-12 px-4 bg-white text-center border-b border-gray-200">
+            <div class="max-w-2xl mx-auto">
+                <h1 class="text-3xl md:text-4xl font-oswald font-bold text-gray-900 mb-4">Red River BBQ &amp; Grill</h1>
+                <p class="text-gray-600 leading-relaxed">Red River BBQ &amp; Grill is a fast-growing Texas BBQ restaurant group with locations in Katy and League City. We're looking for passionate, hard-working people who take pride in great food and genuine hospitality. Whether you're starting your first job or looking to grow a long-term career in the restaurant industry, we want to hear from you.</p>
+            </div>
+        </section>
+
+        <!-- WHY WORK HERE SECTION -->
+        <section class="py-14 px-4 bg-gray-50">
+            <div class="max-w-5xl mx-auto">
+                <div class="text-center mb-10">
+                    <h2 class="text-3xl md:text-4xl font-oswald font-bold text-gray-900 mb-3">Why Work at Red River BBQ &amp; Grill?</h2>
+                    <p class="text-gray-500 max-w-xl mx-auto text-sm leading-relaxed">We believe our team members are the heart of our restaurant. We invest in the people who make every plate and every guest experience count.</p>
                 </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                    <!-- Card 1 -->
+                    <div class="bg-white border border-gray-200 rounded-xl p-6 text-center shadow-sm">
+                        <div class="flex justify-center mb-3">
+                            <div class="w-10 h-10 rounded-full bg-red-50 flex items-center justify-center">
+                                <i data-lucide="dollar-sign" class="w-5 h-5 text-[#cc0000]"></i>
+                            </div>
+                        </div>
+                        <h3 class="font-oswald font-bold uppercase text-sm tracking-widest text-gray-900 mb-2">Competitive Pay</h3>
+                        <p class="text-xs text-gray-500 leading-relaxed">We offer competitive hourly wages and tips, with regular performance reviews and opportunities to grow your earnings over time.</p>
+                    </div>
+                    <!-- Card 2 -->
+                    <div class="bg-white border border-gray-200 rounded-xl p-6 text-center shadow-sm">
+                        <div class="flex justify-center mb-3">
+                            <div class="w-10 h-10 rounded-full bg-red-50 flex items-center justify-center">
+                                <i data-lucide="clock" class="w-5 h-5 text-[#cc0000]"></i>
+                            </div>
+                        </div>
+                        <h3 class="font-oswald font-bold uppercase text-sm tracking-widest text-gray-900 mb-2">Flexible Scheduling</h3>
+                        <p class="text-xs text-gray-500 leading-relaxed">We work with your availability — part-time, full-time, and weekend shifts available. Great for students, parents, and career changers.</p>
+                    </div>
+                    <!-- Card 3 -->
+                    <div class="bg-white border border-gray-200 rounded-xl p-6 text-center shadow-sm">
+                        <div class="flex justify-center mb-3">
+                            <div class="w-10 h-10 rounded-full bg-red-50 flex items-center justify-center">
+                                <i data-lucide="trending-up" class="w-5 h-5 text-[#cc0000]"></i>
+                            </div>
+                        </div>
+                        <h3 class="font-oswald font-bold uppercase text-sm tracking-widest text-gray-900 mb-2">Room to Grow</h3>
+                        <p class="text-xs text-gray-500 leading-relaxed">Many of our managers and kitchen leads started as entry-level team members. We promote from within and reward dedication with real career advancement.</p>
+                    </div>
+                    <!-- Card 4 -->
+                    <div class="bg-white border border-gray-200 rounded-xl p-6 text-center shadow-sm">
+                        <div class="flex justify-center mb-3">
+                            <div class="w-10 h-10 rounded-full bg-red-50 flex items-center justify-center">
+                                <i data-lucide="utensils" class="w-5 h-5 text-[#cc0000]"></i>
+                            </div>
+                        </div>
+                        <h3 class="font-oswald font-bold uppercase text-sm tracking-widest text-gray-900 mb-2">Free Meals on Shift</h3>
+                        <p class="text-xs text-gray-500 leading-relaxed">Enjoy complimentary meals while you work. When you love what you serve, it shows — and we make sure you get to experience what makes Red River special.</p>
+                    </div>
+                    <!-- Card 5 -->
+                    <div class="bg-white border border-gray-200 rounded-xl p-6 text-center shadow-sm">
+                        <div class="flex justify-center mb-3">
+                            <div class="w-10 h-10 rounded-full bg-red-50 flex items-center justify-center">
+                                <i data-lucide="users" class="w-5 h-5 text-[#cc0000]"></i>
+                            </div>
+                        </div>
+                        <h3 class="font-oswald font-bold uppercase text-sm tracking-widest text-gray-900 mb-2">Great Team Culture</h3>
+                        <p class="text-xs text-gray-500 leading-relaxed">We're a team-first kitchen. You'll work alongside people who have your back, managers who respect your time, and a culture built on Texas pride and good food.</p>
+                    </div>
+                    <!-- Card 6 -->
+                    <div class="bg-white border border-gray-200 rounded-xl p-6 text-center shadow-sm">
+                        <div class="flex justify-center mb-3">
+                            <div class="w-10 h-10 rounded-full bg-red-50 flex items-center justify-center">
+                                <i data-lucide="map-pin" class="w-5 h-5 text-[#cc0000]"></i>
+                            </div>
+                        </div>
+                        <h3 class="font-oswald font-bold uppercase text-sm tracking-widest text-gray-900 mb-2">Multiple Locations</h3>
+                        <p class="text-xs text-gray-500 leading-relaxed">With locations in Katy and League City, TX — and more on the way — find a location that works for where you live and where you want to grow.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- OPEN POSITIONS SECTION -->
+        <section class="py-14 px-4 bg-white">
+            <div class="max-w-5xl mx-auto">
+                <div class="text-center mb-10">
+                    <h2 class="text-3xl md:text-4xl font-oswald font-bold text-gray-900 mb-3">Open Positions</h2>
+                    <p class="text-gray-500 max-w-xl mx-auto text-sm leading-relaxed">We're currently hiring for the following roles at our Katy and League City, Texas locations. No experience? No problem — we'll train the right person.</p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+                    <!-- Position 1 -->
+                    <div class="border border-gray-200 rounded-xl p-5 flex gap-4 items-start shadow-sm hover:shadow-md transition-shadow">
+                        <div class="w-9 h-9 rounded-lg bg-red-50 flex items-center justify-center flex-shrink-0 mt-0.5">
+                            <i data-lucide="flame" class="w-5 h-5 text-[#cc0000]"></i>
+                        </div>
+                        <div>
+                            <h3 class="font-oswald font-bold uppercase text-sm tracking-wide text-gray-900">Line Cook / Pit Cook</h3>
+                            <p class="text-xs text-[#cc0000] font-semibold mb-1">Full-Time &amp; Part-Time &nbsp;&middot;&nbsp; Katy &amp; League City</p>
+                            <p class="text-xs text-gray-500 leading-relaxed">Prepare and cook BBQ meats, sides, and burgers to Red River standards. Experience with smoked meats a plus but not required.</p>
+                        </div>
+                    </div>
+                    <!-- Position 2 -->
+                    <div class="border border-gray-200 rounded-xl p-5 flex gap-4 items-start shadow-sm hover:shadow-md transition-shadow">
+                        <div class="w-9 h-9 rounded-lg bg-red-50 flex items-center justify-center flex-shrink-0 mt-0.5">
+                            <i data-lucide="clipboard-list" class="w-5 h-5 text-[#cc0000]"></i>
+                        </div>
+                        <div>
+                            <h3 class="font-oswald font-bold uppercase text-sm tracking-wide text-gray-900">Server / Counter Staff</h3>
+                            <p class="text-xs text-[#cc0000] font-semibold mb-1">Full-Time &amp; Part-Time &nbsp;&middot;&nbsp; Katy &amp; League City</p>
+                            <p class="text-xs text-gray-500 leading-relaxed">Take orders, serve guests, and deliver the warm Texas hospitality we're known for. Prior restaurant experience preferred but not required.</p>
+                        </div>
+                    </div>
+                    <!-- Position 3 -->
+                    <div class="border border-gray-200 rounded-xl p-5 flex gap-4 items-start shadow-sm hover:shadow-md transition-shadow">
+                        <div class="w-9 h-9 rounded-lg bg-red-50 flex items-center justify-center flex-shrink-0 mt-0.5">
+                            <i data-lucide="shopping-bag" class="w-5 h-5 text-[#cc0000]"></i>
+                        </div>
+                        <div>
+                            <h3 class="font-oswald font-bold uppercase text-sm tracking-wide text-gray-900">To-Go / Cashier</h3>
+                            <p class="text-xs text-[#cc0000] font-semibold mb-1">Part-Time &nbsp;&middot;&nbsp; Katy &amp; League City</p>
+                            <p class="text-xs text-gray-500 leading-relaxed">Handle online orders, curbside pickup, and in-person cashier duties. Strong communication skills and attention to detail are a must.</p>
+                        </div>
+                    </div>
+                    <!-- Position 4 -->
+                    <div class="border border-gray-200 rounded-xl p-5 flex gap-4 items-start shadow-sm hover:shadow-md transition-shadow">
+                        <div class="w-9 h-9 rounded-lg bg-red-50 flex items-center justify-center flex-shrink-0 mt-0.5">
+                            <i data-lucide="sparkles" class="w-5 h-5 text-[#cc0000]"></i>
+                        </div>
+                        <div>
+                            <h3 class="font-oswald font-bold uppercase text-sm tracking-wide text-gray-900">Dishwasher / Utility</h3>
+                            <p class="text-xs text-[#cc0000] font-semibold mb-1">Part-Time &nbsp;&middot;&nbsp; Katy &amp; League City</p>
+                            <p class="text-xs text-gray-500 leading-relaxed">Keep the kitchen clean and organized. A great entry point to a restaurant career — many of our kitchen team started right here.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- APPLY CTA BANNER -->
+        <section class="py-14 px-4 bg-[#cc0000] text-white text-center">
+            <div class="max-w-2xl mx-auto">
+                <h2 class="text-3xl md:text-4xl font-oswald font-bold uppercase tracking-widest mb-4">Ready to Join the Red River Family?</h2>
+                <p class="text-white/90 text-sm leading-relaxed mb-8">Fill out the application below and a member of our management team will be in touch. We hire people who are motivated, reliable, and proud of their work — just like us.</p>
+                <button onclick="document.getElementById('careerForm').scrollIntoView({behavior:'smooth'})" class="border-2 border-white text-white font-oswald font-bold uppercase tracking-widest px-8 py-3 rounded-lg hover:bg-white hover:text-[#cc0000] transition-all duration-300">
+                    Apply Now &darr;
+                </button>
             </div>
         </section>
 
@@ -1260,7 +1397,7 @@
                 <!-- Kiersh Co -->
                 <div class="flex flex-col items-center group cursor-pointer">
                     <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(255,255,255,0.6)]">
-                        <img src="images/Kiersh-Co-Transparent-PNG.png" alt="Kiersh Catering" class="h-20 md:h-24 w-auto opacity-100 brightness-125" />
+                        <img src="images/kiersh co white trans.png" alt="Kiersh Catering" class="h-32 md:h-40 w-auto opacity-100 brightness-125" />
                     </a>
                 </div>
             </div>
@@ -1410,5 +1547,9 @@
             this.reset();
         });
     </script>
+    <!-- Sticky Order Online Button -->
+    <div class="fixed bottom-6 right-6 z-50 group">
+        <button onclick="openOrderModal()" class="btn-modern animate-pulse-glow text-white font-oswald font-bold uppercase tracking-wider px-6 py-3 rounded-full text-sm">Order Online</button>
+    </div>
 </body>
 </html>
