--- a/dine-in-menu.html
+++ b/dine-in-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -568,16 +568,6 @@
                 class="w-full h-full object-cover"
             />
             <div class="absolute inset-0 bg-black/45"></div>
-            <div class="absolute inset-0 flex items-center justify-center text-center px-4">
-                <div class="max-w-4xl mx-auto">
-                    <h1 class="text-4xl md:text-6xl lg:text-7xl font-bold uppercase text-white mb-3" style="font-family:'Oswald',sans-serif; letter-spacing:0.04em; text-shadow:0 2px 12px rgba(0,0,0,.6);">
-                        Dine-In Menu
-                    </h1>
-                    <p class="text-lg md:text-xl text-gray-200" style="font-family:'Open Sans',sans-serif;">
-                        Authentic Texas BBQ &amp; Homestyle Cooking
-                    </p>
-                </div>
-            </div>
         </section>
 
         <section class="px-4 py-8 md:py-12">
@@ -879,7 +869,7 @@
                 <!-- Kiersh Co -->
                 <div class="flex flex-col items-center group cursor-pointer">
                     <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(255,255,255,0.6)]">
-                        <img src="images/Kiersh-Co-Transparent-PNG.png" alt="Kiersh Catering" class="h-20 md:h-24 w-auto opacity-100 brightness-125" />
+                        <img src="images/kiersh co white trans.png" alt="Kiersh Catering" class="h-32 md:h-40 w-auto opacity-100 brightness-125" />
                     </a>
                 </div>
             </div>
@@ -1025,5 +1015,9 @@
             setTimeout(revealOnScroll, 100);
         });
     </script>
+    <!-- Sticky Order Online Button -->
+    <div class="fixed bottom-6 right-6 z-50 group">
+        <button onclick="openOrderModal()" class="btn-modern animate-pulse-glow text-white font-oswald font-bold uppercase tracking-wider px-6 py-3 rounded-full text-sm">Order Online</button>
+    </div>
 </body>
 </html>
