--- a/league-city-pickup.html
+++ b/league-city-pickup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -44,5 +44,9 @@
 </head>
 <body>
     <p>Redirecting to order page...</p>
+    <!-- Sticky Order Online Button -->
+    <div class="fixed bottom-6 right-6 z-50 group">
+        <button onclick="openOrderModal()" class="btn-modern animate-pulse-glow text-white font-oswald font-bold uppercase tracking-wider px-6 py-3 rounded-full text-sm">Order Online</button>
+    </div>
 </body>
 </html>
