--- a/reviews.html
+++ b/reviews.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1334,7 +1334,7 @@
                 <!-- Kiersh Co -->
                 <div class="flex flex-col items-center group cursor-pointer">
                     <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(255,255,255,0.6)]">
-                        <img src="images/Kiersh-Co-Transparent-PNG.png" alt="Kiersh Catering" class="h-20 md:h-24 w-auto opacity-100 brightness-125" />
+                        <img src="images/kiersh co white trans.png" alt="Kiersh Catering" class="h-32 md:h-40 w-auto opacity-100 brightness-125" />
                     </a>
                 </div>
             </div>
@@ -1397,15 +1397,6 @@
         </div>
     </div>
 
-    <!-- SCROLL TO TOP BUTTON -->
-    <button 
-        id="scroll-to-top"
-        class="fixed bottom-8 right-4 md:right-8 w-12 h-12 bg-gradient-to-br from-red-600 to-red-800 text-white rounded-full shadow-lg hover:shadow-red-500/50 transition-all duration-300 opacity-0 pointer-events-none translate-y-4 flex items-center justify-center hover:scale-110 z-50"
-        title="Go to top"
-    >
-        <i data-lucide="chevron-up" class="w-6 h-6"></i>
-    </button>
-
     <!-- SCRIPTS -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
@@ -1429,26 +1420,6 @@
             if (e.key === 'Escape') {
                 closeOrderModal();
             }
-        });
-
-        // ===== Scroll to Top Logic =====
-        const scrollBtn = document.getElementById('scroll-to-top');
-        
-        window.addEventListener('scroll', () => {
-            if (window.scrollY > 300) {
-                scrollBtn.classList.remove('opacity-0', 'pointer-events-none', 'translate-y-4');
-                scrollBtn.classList.add('opacity-100', 'pointer-events-auto', 'translate-y-0');
-            } else {
-                scrollBtn.classList.add('opacity-0', 'pointer-events-none', 'translate-y-4');
-                scrollBtn.classList.remove('opacity-100', 'pointer-events-auto', 'translate-y-0');
-            }
-        });
-
-        scrollBtn.addEventListener('click', () => {
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-            });
         });
 
         // ===== Scroll Reveal Animation =====
@@ -1562,5 +1533,9 @@
             }
         });
     </script>
+    <!-- Sticky Order Online Button -->
+    <div class="fixed bottom-6 right-6 z-50 group">
+        <button onclick="openOrderModal()" class="btn-modern animate-pulse-glow text-white font-oswald font-bold uppercase tracking-wider px-6 py-3 rounded-full text-sm">Order Online</button>
+    </div>
 </body>
 </html>
