--- a/catering.html
+++ b/catering.html
@@ -659,8 +659,8 @@
     <!-- MAIN CONTENT -->
     <main class="flex-grow">
         <!-- Hero Section -->
-        <section class="relative h-[300px] md:h-[500px] w-full overflow-hidden">
-            <img src="images/Red River BBQ &amp; Grill Hero image food.png" alt="Red River BBQ &amp; Grill Catering" class="w-full h-full object-cover" />
+        <section class="relative w-full overflow-hidden">
+            <img src="images/Red River BBQ &amp; Grill Hero image food.png" alt="Red River BBQ &amp; Grill Catering" class="w-full h-auto md:h-[500px] md:object-cover" />
             <div class="absolute inset-0 bg-black/45"></div>
         </section>
 
