--- a/party-room.html
+++ b/party-room.html
@@ -627,11 +627,11 @@
 
     <main class="flex-grow">
         <!-- HERO SECTION -->
-        <section class="relative h-[400px] md:h-[700px] w-full overflow-hidden">
+        <section class="relative w-full overflow-hidden md:h-[700px]">
             <img 
                 src="images/Red-River-BBQ-Party-Room.png" 
                 alt="Red River BBQ & Grill Party Room" 
-                class="w-full h-full object-cover"
+                class="w-full h-auto md:h-full md:object-cover"
             />
             <div class="absolute inset-0 bg-black/30"></div>
         </section>
