--- a/careers.html
+++ b/careers.html
@@ -647,11 +647,11 @@
 
     <main class="flex-grow">
         <!-- HERO SECTION -->
-        <section class="relative h-[400px] md:h-[700px] w-full overflow-hidden">
+        <section class="relative w-full overflow-hidden md:h-[700px]">
             <img 
                 src="images/RedRiverBBQ&Grill-locationshero.jpg" 
                 alt="Red River BBQ & Grill Careers" 
-                class="w-full h-full object-cover"
+                class="w-full h-auto md:h-full md:object-cover"
             />
             
         </section>
