--- a/community.html
+++ b/community.html
@@ -464,11 +464,11 @@
 
     <main class="flex-grow">
         <!-- HERO SECTION -->
-        <section class="relative h-[400px] md:h-[700px] w-full overflow-hidden">
+        <section class="relative w-full overflow-hidden md:h-[700px]">
             <img 
                 src="images/community-Banner-scaled.jpg" 
                 alt="Community Spirit Days - Red River BBQ & Grill" 
-                class="w-full h-full object-cover"
+                class="w-full h-auto md:h-full md:object-cover"
             />
             
             <div class="absolute inset-0 flex items-center justify-center text-center px-4">
