--- a/dine-in-menu.html
+++ b/dine-in-menu.html
@@ -561,11 +561,11 @@
     <main class="flex-grow menu-board-wrap">
 
         <!-- Hero Image -->
-        <section class="relative h-[300px] md:h-[500px] w-full overflow-hidden">
+        <section class="relative w-full overflow-hidden">
             <img
                 src="images/Red River BBQ & Grill Hero image food.png"
                 alt="Red River BBQ &amp; Grill €“ Dine-In Menu spread"
-                class="w-full h-full object-cover"
+                class="w-full h-auto md:h-[500px] md:object-cover"
             />
             <div class="absolute inset-0 bg-black/45"></div>
         </section>
