--- a/index.html
+++ b/index.html
@@ -699,12 +699,12 @@
 
     <main class="flex-grow">
         <!-- HERO SECTION -->
-        <section class="relative h-[400px] md:h-[700px] w-full overflow-hidden" id="hero">
+        <section class="relative w-full overflow-hidden md:h-[700px]" id="hero">
             <!-- Parallax Background Image -->
             <img 
                 src="images/RedRiverBBQ&Grill-locationshero.jpg" 
                 alt="Red River BBQ & Grill Delicious Food" 
-                class="hero-image w-full h-full object-cover"
+                class="hero-image w-full h-auto md:h-full md:object-cover"
                 id="hero-image"
             />
             <div class="absolute inset-0 flex items-end justify-center pb-12">
