--- a/locations.html
+++ b/locations.html
@@ -157,8 +157,8 @@
 
     <main class="flex-grow">
         <!-- Page Intro Banner -->
-        <section class="relative w-full overflow-hidden">
-            <img src="images/RedRiverBBQ&Grill-locationshero.jpg" alt="Red River BBQ & Grill Locations" class="w-full h-[260px] md:h-[420px] object-cover" />
+        <section class="relative w-full overflow-hidden md:h-[420px]">
+            <img src="images/RedRiverBBQ&Grill-locationshero.jpg" alt="Red River BBQ & Grill Locations" class="w-full h-auto md:h-full md:object-cover" />
             <div class="absolute inset-0 bg-gradient-to-b from-black/50 via-black/30 to-black/60"></div>
         </section>
 
